--- a/mavenwebapp.yaml
+++ b/mavenwebapp.yaml
@@ -8,12 +8,13 @@ spec:
   containers:
   - name: mavenappcontainer
     image: 015901552966.dkr.ecr.ap-south-1.amazonaws.com/maven-web-app:${buildnumber}
-    requests:
-      cpu: "300m"
-      memory: "300Mi"
-    limits:
-      cpu: "500m"
-      memory: "500Mi"  
+    resources:
+      requests:
+        cpu: "300m"
+        memory: "300Mi"
+      limits:
+        cpu: "500m"
+        memory: "500Mi"  
   ports:
   - containerPort: 8080
     
