--- a/mavenwebapp.yaml
+++ b/mavenwebapp.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: mavenappcontainer
-    image: 015901552966.dkr.ecr.ap-south-1.amazonaws.com/maven-web-app:${buildnumber}
+    image: 015901552966.dkr.ecr.ap-south-1.amazonaws.com/maven-web-app:${env.BUILD_NUMBER}
     resources:
       requests:
         cpu: "300m"
