--- a/mavenwebapp.yaml
+++ b/mavenwebapp.yaml
@@ -1,31 +1,58 @@
-apiVersion: v1 
-kind: Pod 
+apiVersion: apps/v1
+kind: Deployment 
 metadata:
-  name: mavenpod
+  name: mavendeployment
   labels:
     app: mavenapp
 spec:
-  containers:
-  - name: mavenappcontainer
-    image: 015901552966.dkr.ecr.ap-south-1.amazonaws.com/maven-web-app:${build_Number}
-    resources:
-      requests:
-        cpu: "300m"
-        memory: "300Mi"
-      limits:
-        cpu: "500m"
-        memory: "500Mi"  
-    ports:
-    - containerPort: 8080
-    
+  replicas: 2
+  selector:
+    matchLabels:
+      app: mavenapp
+  template:
+    metadata:
+      labels:
+        app: mavenapp
+    spec:
+      containers:
+      - name: mavenappcontainer
+        image: 015901552966.dkr.ecr.ap-south-1.amazonaws.com/maven-web-app:${build_Number}
+        ports:
+        - containerPort: 8080
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+          requests:
+            cpu: "250m"
+            memory: "256Mi"
+        livenessProbe:
+          httpGet:
+            path: /maven-web-application
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /maven-web-application
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 40
+          httpGet:
+            path: /maven-web-application
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 30
+
+
 
 
 ---
 
-apiVersion: v1 
-kind: Service 
-metadata:
-  name: mavenappsvc
+apiVersion: v1
+kind: Service
+metadata: 
+  name: mavensvc
 spec:
   type: NodePort
   selector:
@@ -33,4 +60,6 @@ spec:
   ports:
   - port: 80
     targetPort: 8080
+
+      
     
