--- a/mavenwebapp.yaml
+++ b/mavenwebapp.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: mavenapp
 spec:
-  replicas: 2
+  #replicas: 2
   selector:
     matchLabels:
       app: mavenapp
@@ -60,6 +60,31 @@ spec:
   ports:
   - port: 80
     targetPort: 8080
-
+    
+---
+apiVersion: autoscaling/v2
+kind: HorizontalAutoPodscaler
+metadata:
+  name: mavenapphpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment 
+    name: mavendeployment
+  minReplicas: 1
+  maxReplicas: 3
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu 
+      target:
+      type: Utilization
+      averageUtilization: 60
+  - type: Resource
+    resource:
+      name: memory
+      target:
+      type: Utilization
+      averageUtilization: 80
       
     
