--- a/mavenwebapp.yaml
+++ b/mavenwebapp.yaml
@@ -63,7 +63,7 @@ spec:
     
 ---
 apiVersion: autoscaling/v2
-kind: HorizontalPodscaler
+kind: HorizontalPodAutoscaler
 metadata:
   name: mavenapphpa
 spec:
